k8s/deployment-staff-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfloat-staff-portal
  namespace: openfloat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: openfloat-staff-portal
  template:
    metadata:
      labels:
        app: openfloat-staff-portal
    spec:
      containers:
        - name: openfloat-staff-portal
          image: openfloat/openfloat-staff-portal:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { cpu: 500m, memory: 256Mi }
