k8s/service-erp.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfloat-erp
  namespace: openfloat
spec:
  selector:
    app: openfloat-erp
  ports:
    - name: http
      port: 8082
      targetPort: 8082
