k8s/service-staff-portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfloat-staff-portal
  namespace: openfloat
spec:
  selector:
    app: openfloat-staff-portal
  ports:
    - name: http
      port: 80
      targetPort: 80
